--- a/app.json
+++ b/app.json
@@ -9,34 +9,46 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
+      "supportsTablet": true,
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "This app requires camera access",
+        "NSCameraUsageDescription": "This app requires camera access",
+        "NSLocationWhenInUseUsageDescription": "This app requires location access to show your current location on the map."
+      },
+      "android": {
+        "adaptiveIcon": {
+          "foregroundImage": "./assets/images/adaptive-icon.png",
           "backgroundColor": "#ffffff"
         }
+      },
+      "web": {
+        "bundler": "metro",
+        "output": "static",
+        "favicon": "./assets/images/favicon.png"
+      },
+      "plugins": [
+        "expo-router",
+        [
+          "expo-splash-screen",
+          {
+            "image": "./assets/images/splash-icon.png",
+            "imageWidth": 200,
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+          }
+        ],
+          [
+            "expo-camera",
+            {
+              "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+              "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone"
+            }
+        ],
+        "expo-font"
       ],
-      "expo-font"
-    ],
-    "experiments": {
-      "typedRoutes": true
+      "experiments": {
+        "typedRoutes": true
+      }
     }
   }
 }
