--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.5",
+    "expo-media-library": "^17.0.5",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "~0.29.19",
     "expo-status-bar": "~2.0.0",
@@ -40,6 +41,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
