--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.4",
     "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.5",
@@ -46,6 +47,7 @@
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "^1.20.1",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-reanimated": "~3.16.1",
@@ -53,8 +55,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image": "~2.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
