--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@types/firebase": "^2.4.32",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "~52.0.24",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.11",
     "expo-constants": "~17.0.3",
+    "expo-file-system": "^18.0.7",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.4",
     "expo-image-picker": "~16.0.4",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.5",
@@ -53,8 +56,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-image": "~2.0.4"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
