--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-bouncy-checkbox": "^4.1.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
